Wed Sep 26 18:45:32 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.[ch], proj-props.c, xml-read.c xml-write.c:
	  add support for a to-do list.

	* proj.[ch], file-io.c, prefs.[ch], ctree.c: add weekly, 
          monthly time totals

	* proj.[ch], xml-read.c, xml-write.c, ghtml.c: : add 
          billing status field

Sun Sep 23 15:17:30 CDT 2001  Linas Vepstas <linas@linas.org>

	* menucmd.c, toolbar.c: use the focus row, not the 
	  current project, as the target of menu operations.

	* err-throw.c: add canonical error messages 

	* main.c: modify order of intialization, in prep for 
	  SQL and other data sources.

	* file-io.c: add support for alternate data sources 
	  (e.g. sql work being done by Thomas Lang?s)

	* ctree.c, menus.c: add support for showing & editing 
	  the task memo from the main window

Wed Sep 19 10:17:58 CDT 2001  Linas Vepstas <linas@linas.org>

	* xml-read.c: changes to minimize likelyhood of loss
	  of data if some weird i/o error occurs.

Thu Sep 13 13:11:19 CDT 2001  Linas Vepstas <linas@linas.org>

	* prefs.[ch], options.c: transition user preferences
	  dialog to glade dialog
	* *.[ch]: misc multiple bug fixes

Mon Sep 10 14:29:50 CDT 2001  Linas Vepstas <linas@linas.org>

	* idle-timer.[ch], timers.c: detect system idleness, 
	  stop current project after an inactivity timeout.
	* ctree.c: make the arrow keys, the enter key work.
	* journal.c, proj.c: implement cut & paste of memos 
	  in the journal report.

Sat Sep  8 13:05:24 CDT 2001  Linas Vepstas <linas@linas.org>

	* phtml.[ch], ghtml.[ch], journal.c: reimplement reports 
	  with guile interpreter.
	* ghtml.c: provide configurable column titles.
	* journal.c: i18n'ize the paths to the reports

Fri Sep  7 10:51:53 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.c: misc bug fxes

Tue Sep  4 23:43:02 CDT 2001  Linas Vepstas <linas@linas.org>

	* phtml.c: provide support for configurable report layout,
	  add invoice creation.
